# snapper-tui

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  NOTICE  README.md  SECURITY.md
.github/: CODEOWNERS  FUNDING.yml  dependabot.yml  pull_request_template.md  release-drafter.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  chore.yml  config.yml  docs.yml  feature_request.yml  question.yml
.github/PULL_REQUEST_TEMPLATE/: bug_fix.md  chore.md  docs.md  feature.md
.github/workflows/: ci.yml  release-drafter.yml  stale.yml
scripts/: release.sh
src/: app.rs  lib.rs  limine.rs  main.rs  snapper.rs  state.rs  system.rs  theme.rs  ui.rs
tests/: app.rs  app_integration.rs  basic.rs  limine.rs  limine_advanced_integration.rs  limine_basic_integration.rs  limine_config_integration.rs  snapper.rs  snapper_cleanup_config_quota_integration.rs  snapper_create_delete_integration.rs  snapper_integration.rs  snapper_list_snapshots_integration.rs  snapper_modify_integration.rs  snapper_mount_umount_rollback_integration.rs  snapper_status_diff_integration.rs  state.rs  state_load_save_integration.rs  system.rs  theme.rs  theme_integration.rs  ui.rs  ui_integration.rs
