[package]
name = "snapper-tui"
version = "0.1.1"
edition = "2021"
license = "GPL-3.0-or-later"
repository = "https://github.com/j4v3l/snapper-tui"
description = "A professional ratatui-based TUI for snapper with CRUD, config tabs, conditional scrollbars, and a clean UX."

[profile.release]
codegen-units = 1
lto = true
panic = "abort"

[dependencies]
anyhow = "1"
thiserror = "1"
ratatui = { version = "0.26", default-features = false, features = ["crossterm"] }
crossterm = "0.27"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
unicode-width = "0.2"
which = "6"
chrono = { version = "0.4", default-features = false, features = ["std", "clock"] }
shell-escape = "0.1"
